[project]
name = "fsl-bsed"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.14.0",
    "librosa>=0.11.0",
    "pandas>=2.3.1",
    "pyyaml>=6.0.2",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchinfo>=1.8.0",
    "torchvision>=0.22.1",
]
